--- a/app/stylesheets/sass/settings/_fonts.sass
+++ b/app/stylesheets/sass/settings/_fonts.sass
@@ -14,7 +14,7 @@ $font-size-h2: 19px
 $font-size-h3: 17px
 $font-size-h4: 15px
 $font-size-h5: $font-size-base
-$font-size-h5: $font-size-small
+$font-size-h6: $font-size-small
 
 $font-color: #4c5958
 $font-color-dark: #343d3c
@@ -22,7 +22,7 @@ $font-color-dark: #343d3c
 $headings-font-family:    inherit
 $headings-font-weight:    500
 $headings-line-height:    1.3
-$headings-color:          $font-color-dark
+//$headings-color:          $font-color-dark
 
 $font-size-nav: 13px
 
