--- a/app/stylesheets/sass/modules/_adm-sidebar-nav.sass
+++ b/app/stylesheets/sass/modules/_adm-sidebar-nav.sass
@@ -12,7 +12,7 @@ $left-sidebar-padding-top: 40px
   @include text-overflow
   margin-bottom: -1px
   font-size: 16px
-  &.__active
+  &.selected
     .adm-sidebar-nav-link
       background-color: #525d68
 
