--- a/app/stylesheets/sass/modules/_adm-categories.sass
+++ b/app/stylesheets/sass/modules/_adm-categories.sass
@@ -75,7 +75,7 @@ $zindex-adm-categories-item-active: 10
     cursor: pointer
     .adm-btn-edit-category
       visibility: visible
-  &.__active
+  &.selected
     background-color: $adm-categories-item-active-bg
     color: #fff
     z-index: $zindex-adm-categories-item-active
